// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<ListStyleFacet
  facetHeader="issues.facet.assignees"
  fetching={false}
  getFacetItemText={[Function]}
  getSearchResultKey={[Function]}
  getSearchResultText={[Function]}
  getSortedItems={[Function]}
  loadSearchResultCount={[Function]}
  maxInitialItems={15}
  maxItems={100}
  minSearchLength={2}
  onChange={[MockFunction]}
  onClear={[Function]}
  onItemClick={[Function]}
  onSearch={[Function]}
  onToggle={[MockFunction]}
  open={true}
  property="assignees"
  query={Object {}}
  renderFacetItem={[Function]}
  renderSearchResult={[Function]}
  searchPlaceholder="search.search_for_users"
  stats={
    Object {
      "": 5,
      "bar": 7,
      "baz": 6,
      "foo": 13,
    }
  }
  values={
    Array [
      "foo",
    ]
  }
/>
`;

exports[`test behavior should correctly render facet item 1`] = `
<React.Fragment>
  <Connect(Avatar)
    className="little-spacer-right"
    name="Name Baz"
    size={16}
  />
  Name Baz
</React.Fragment>
`;

exports[`test behavior should correctly render facet item 2`] = `
<React.Fragment>
  <Connect(Avatar)
    className="little-spacer-right"
    name="foo"
    size={16}
  />
  user.x_deleted.foo
</React.Fragment>
`;

exports[`test behavior should correctly render search result correctly 1`] = `
<React.Fragment>
  <Connect(Avatar)
    className="little-spacer-right"
    name="Name Bar"
    size={16}
  />
  <React.Fragment>
    Name 
    <mark>
      Ba
    </mark>
    r
  </React.Fragment>
</React.Fragment>
`;

exports[`test behavior should correctly render search result correctly 2`] = `
<React.Fragment>
  <Connect(Avatar)
    className="little-spacer-right"
    name="foo"
    size={16}
  />
  <React.Fragment>
    user.x_deleted.
    <mark>
      fo
    </mark>
    o
  </React.Fragment>
</React.Fragment>
`;
